[package]
name = "scaled_storage"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
anchorhash = "0.2.1"
highway = "0.8.0"
ic-cdk = "0.3"
serde = "1.0"
ic-kit = "0.4.4"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }