[package]
name = "scaled_storage"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "DHT Solution for the Internet Computer"
repository = "https://github.com/scroobius-pip/scaled_storage"

[lib]
path = "lib.rs"

[dependencies]
anchorhash = "0.2.1"
highway = "0.8.0"
serde = "1.0"
ic-kit = "0.4.4"
serde_bytes = "0.11.5"
ic-cdk = "0.5.0"
candid = "0.7.4"
futures = "0.3.21"
read-byte-slice = "0.1.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }