[package]
name = "ss_uploader"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Wasm Uploader for Scaled Storage"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.14", features = ["derive"] }
read-byte-slice = "0.1.2"
candid = "0.7.4"
serde = "1.0.137"
tokio = {version = "1.18.0", features = ["rt", "macros"]}
ic-agent = "0.15.0"
garcon = "0.2.3"